# utilities

./: .gitignore  README.md  autoelect.py  userlist.txt  userlogon.py
mkdb/: Cargo.toml  README.md
mkdb/src/: main.rs
