[package]
name = "mkdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
argon2 = "0.4.1"
